css image gap margin fix

--- a/style.css
+++ b/style.css
@@ -72,6 +72,8 @@ img {
     max-width: 100%;
     max-height: 89vh;
     display: block;
+    margin-top: 11px;
+    margin-bottom: 11px;
 }
 
 /* BLOCK HOVER LINKS
